# isobar

./: .env.example  .gitignore  BUGS.md  ISOBAR-ARCHITECTURE.md  PROGRESS.md  README.md  all_tests.txt  isobar.db  pyproject.toml
.agent/: ARCHITECTURE-BACKEND.md  ARCHITECTURE-FRONTEND.md
Frontend/: package-lock.json  package.json  tailwind.config.ts
Frontend/app/: globals.css  layout.tsx
Frontend/app/(app)/: layout.tsx
Frontend/app/(app)/candidates/[id]/: loading.tsx  page.tsx
Frontend/app/(app)/dashboard/: page.tsx
Frontend/app/(app)/upload/: page.tsx
Frontend/app/(marketing)/: page.tsx
Frontend/app/api/upload/: route.ts
Frontend/components/candidate/: demand-heatmap.tsx  expertise-donut.tsx  opportunities-table.tsx  skill-cloud.tsx  summary-strip.tsx  top-regions.tsx
Frontend/components/layout/: nav-rail.tsx  top-bar.tsx
Frontend/components/providers/: query-provider.tsx
Frontend/components/ui/: button.tsx
backend/app/: config.py  deps.py  logging_config.py  main.py
backend/app/models/: __init__.py  tables.py
backend/app/routers/: candidates.py  uploads.py
backend/app/schemas/: candidate.py  extraction.py
backend/app/services/: embedding.py  extraction.py  ingestion.py  matching.py  parsing.py  scoring.py  seed.py
backend/tests/: conftest.py  test_api.py  test_embedding.py  test_extraction.py  test_matching.py  test_parsing.py  test_scoring.py
uploads/: 0b838220-9acc-4ac1-ba72-fa6a8fc17fde  4a2cf70c-e345-4362-912b-b58e95bf8d04  7bf991b8-9bec-4906-af15-523f2cf76938  c26c7c5e-e2fa-45b3-8f52-ee6d4a0dfef0
