[project]
name = "isobar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.139.0",
    "openai>=2.45.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
